# hello-gtk-cmake

./: CMakeLists.txt  README.md
include/: hello.h
src/: hello.c  main.c
